feat: Bare bones links page
* Renders from variables set in site.yml.

* CSS adapted from LinkFree, with rounded corners
  and a semantic HTML page layout.
  (https://michaelbarney.github.io/LinkFree/)

* Added a README

* Added a build to /docs for GitHub

--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
     "lume": "echo \"import 'lume/cli.ts'\" | deno run --unstable -A -",
-    "build": "deno task lume",
+    "build": "deno task lume --dest docs",
     "serve": "deno task lume -s"
   },
   "imports": {
